Styles.css
/*Fonts*/
@font-face {
    font-family: Valo;
    src: url(Valorant_Font.ttf);
}

header {
    text-align: left;
}

footer {
    width: 100%;
    height: 100px;
    background-color: #000;
    color: #ece8e1;
    text-decoration: none;
    margin-top: 25px;
}


body {
    text-align: center;
    color: #000;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    background-color: #ece8e1;
    margin: 0;
    padding: 0;
    overflow: overlay;
    margin-top: 200px;
}

.homebg {
    background-size: cover;
    padding-top: 50px;
    padding-bottom: 25px;
}

/*Text Formats*/
.titles {
    font-family: Valo;
    font-weight: bold;
    font-size: 20px;    
}

hr.titles {
    width: 150px;
    margin: 0 auto;
}

p {
    font-size: 15px;
    margin: 20px;
}

body p {
    margin: 40px 20px 40px 20px;
}
/*End*/

/*Logo Format*/
img.logo {
    width: 252px;
    height: 80px;
    display: block;
}

img.logo.homepage {
    position: relative;
    margin: auto;
}

img.logo.other {
    position: relative;
    left: 5%;
    margin: 0px 0px 20px 0px;
}

/*Thumbnails*/
img.others {
    transform: skewX(-10deg);
    width: 70%;
    height: 40%;
}

img.main {
    position: center;
    width: 600px;
    height: 337.5px;
}
/*Navigation Bar*/

/*Makes Nav Always Visible*/
nav {
    position: fixed;
    top: 0px;
    z-index: 1;
    width: 100%;
    max-height: 420px;
}

div.navBase {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin: 0;
    padding: 0;
    background-color: #000000;
    overflow: hidden;
    width: 100%;
}

div.nav {
    position: relative;
}

div.nav a {
    display: block;
    padding: 14px 16px 14px 16px;
    height: 25px;
    width: 25px;
    color: #ece8e1;
    text-align: center;
    text-decoration: none;
    font-size: 15px;
    min-width: 150px;
}

div.nav a:hover {
    background-color: #000070;
}
/*End*/

/*Listing Items or Images*/
div.items {
    padding: 20px;
    margin-bottom: 50px;
}

/*Custom format for map display*/
div.mapBase {
    margin: auto;
}

div.mapBase div.map {
    display: inline-block;
    width: 20%;
    height: 5%;
    margin-bottom: 20px;
}

div.mapBase div.map img {
    margin-left: 20px;
    max-width: 100%;
    max-height: 100%;
}
/*End*/

/*Dropdown Menu*/
div.DropdownMenu {
    display: none;
    position: fixed;
    background-color: green;
    min-width: 150px;
    z-index: 2;
    margin: auto;
    padding: auto;
}

div.DropdownMenu a {
    color: black;
    display: block;
}
  
div.DropdownMenu a:hover {
    background-color: #fff;
}

div.nav:hover div.DropdownMenu {
    display: block;
}
/*End*/

/*Custom Scrollbar*/
::-webkit-scrollbar{
    width: 11px;
}

::-webkit-scrollbar-track {
    background-color: transparent;
}
::-webkit-scrollbar-thumb {
    background-color: gray;
    border-radius: 10px;

}
::-webkit-scrollbar-thumb:hover {
    background-color: lightgray;
}
/*End*/

/*Patch Notes */
div.Patch_Notes button {
    position: relative;
    background-color: #000000;
    color: #ece8e1;
    width: 100%;
    margin-top: 10px;
    padding: 10px;
}

div.PN_Content {
    display: none;
    overflow: hidden;
    background-color: grey;
    margin-bottom: 5px;
    text-align: justify;
    padding: 10px;
}
/*End*/

.Info_Title{
    text-align: left;
    padding-left: 20px;
}

/*Breadcrumbs Navigation*/
.breadcrumbs {
    background-color: gray; 
    display: block;
    overflow: hidden;
    margin: 0px;
    padding: 0px;
    text-align: left;
}

.breadcrumbs p {
    margin: 20px;
}

.breadcrumbs p a {
    text-decoration: none;
    color: #ece8e1;
}

.breadcrumbs p a:hover {
    color: #000070;
}
/*End*/

/*Arsenal Formatting*/
tr.Arsenal td {
    padding: 10px;
    border: 1px solid gray;
    border-spacing: 0px;
    width: 20%;
    height: 20%; 
    transition: background-color 2s;
    vertical-align: top;
}

tr.Arsenal h5 {
    font-family: Valo;
}

tr.Arsenal td:hover {
    background-color: red;
    color: white;
}

p.arsenalContent {
    display: none;
    font-size: 12px;
}

/*Agents Logo Format*/
div.AgentsBase {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    width: 100%;
}

div.Agents {
    display: inline-block;
    width: auto;
    margin: 10px;
}

div.Agents a{
    color: black;
    text-decoration: none;
    font-size: 12px;
}

img {    
    max-width: 100%;
    max-height: 100%;
}

div.Agents:hover a {
    color: #ff25ff;
}

div.Agents:hover {
    box-shadow: 0px 0px 10px 3px gray;
}

